# nsa

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.markdown  configure  sujet.txt
cmake/: cmake_uninstall.cmake.in
cmake/modules/: FindLibGMP.cmake  FindLibM.cmake
config/: Doxyfile.in  version.h.in
include/nsa/: eratostene.h  tools.h
rapport/: Makefile  rapport.markdown  rsa-80
src/nsa/: eratostene.c  factoint28inter.c  main.c
